tests/ui/repeat-expr/copy-check-deferred-after-fallback.stderr
error[E0282]: type annotations needed for `[Foo<{integer}>; _]`
  --> $DIR/copy-check-deferred-after-fallback.rs:37:9
   |
LL |     let b = [Foo(PhantomData); _];
   |         ^    ---------------- type must be known at this point
   |
help: consider giving `b` an explicit type, where the value of const parameter `N` is specified
   |
LL |     let b: [Foo<{integer}>; N] = [Foo(PhantomData); _];
   |          +++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
